--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "solar",
       "schematics": {},
       "targets": {
         "build": {
